[tool.poetry]
name = "tcas-dashboard-with-myteam"
version = "0.1.0"
description = ""
authors = ["Chanathip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.1"
pandas = "^2.2.2"
webdriver-manager = "^4.0.2"
streamlit = "^1.37.0"
plotly = "^5.23.0"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
